objects/LLC_BI__Income__c.object
<CustomObject>
    <description>The income object stores details about an applicant&apos;s income.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and represents the account to which this income belongs.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this lookup field with the Address record to which the income fields refers. By default, this field is blank.</description>
        <inlineHelpText>This field displays the Address record to which the Income record refers.</inlineHelpText>
        <label>Address</label>
        <referenceTo>LLC_BI__Address__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Adjusted_Annual_Income__c</fullName>
        <description>The system automatically populates this field to display Annual Income adjusted by the percentage in the Adjusted Percent field. By default, this field is blank.</description>
        <formula>LLC_BI__Yearly_Income__c * LLC_BI__Adjusted_Percent__c</formula>
        <inlineHelpText>This field displays Adjusted Annual Income when a percentage is entered in the Adjusted Percent field.</inlineHelpText>
        <label>Adjusted Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Adjusted_Monthly_Income__c</fullName>
        <description>The system automatically populates this field to display Monthly Income adjusted by the percentage in the Adjusted Percent field. By default, this field is blank.</description>
        <formula>LLC_BI__Monthly_Income__c * LLC_BI__Adjusted_Percent__c</formula>
        <inlineHelpText>This field displays Adjusted Monthly Income when a percentage is entered in the Adjusted Percent field.</inlineHelpText>
        <label>Adjusted Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Adjusted_Percent__c</fullName>
        <description>The system enters the percentage to adjust Annual Income and Monthly Income values. By default, this field is blank.</description>
        <inlineHelpText>The percentage to adjust Annual Income and Monthly Income values.</inlineHelpText>
        <label>Adjusted Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Business_Name__c</fullName>
        <description>The user populates this text field to capture the name of the company or employer for which the borrower works. By default, this field is blank.</description>
        <inlineHelpText>Enter the borrower’s employer or business name in this field.</inlineHelpText>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and represents the contact who has this income.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Employer_Phone__c</fullName>
        <description>This number field populates with the phone number of the applicant&apos;s employer. By default, this field is blank.</description>
        <inlineHelpText>This field contains the phone number of the applicant&apos;s employer.</inlineHelpText>
        <label>Employer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user selects this checkbox to indicate that the recorded income information should not be used in the total income calculation. By default, this checkbox is deselected.</description>
        <inlineHelpText>Select this checkbox if this record is not a current source of income.</inlineHelpText>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Excluded_Reason__c</fullName>
        <description>The user populates this text field to indicate why the income information should be excluded from total income calculation. By default, this field is blank.</description>
        <inlineHelpText>Describe why the income information should be excluded from the total income calculation.</inlineHelpText>
        <label>Excluded Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user selects this checkbox to indicate that a relationship income is not an active income. The system only includes &quot;active&quot; relationship income records when a user creates a new loan. By default, this checkbox is deselected.</description>
        <inlineHelpText>Select this checkbox if this relationship income should not be included in future product applications.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Income_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is manually populated. This field is a lookup used to associate an income feature to the income. An income feature is used to attach attributes to the income.</description>
        <inlineHelpText>This field displays the Income Feature record to which the Income record refers.</inlineHelpText>
        <label>Income Feature</label>
        <referenceTo>LLC_BI__Income_Feature__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Income_Source__c</fullName>
        <description>The system or user populates this required picklist to indicate the income&apos;s source. By default, this field is blank.</description>
        <label>Income Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pay Stubs</fullName>
                </value>
                <value>
                    <fullName>Tax Return</fullName>
                </value>
                <value>
                    <fullName>W2</fullName>
                </value>
                <value>
                    <fullName>Customer Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Income_Type__c</fullName>
        <description>The user populates this required picklist to indicate the type of income the record represents. By default, this picklist is blank.</description>
        <label>Income Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alimony Support</fullName>
                </value>
                <value>
                    <fullName>Annual Bonus/Commission</fullName>
                </value>
                <value>
                    <fullName>Gross Annual Income</fullName>
                </value>
                <value>
                    <fullName>Investment/Trust Income</fullName>
                </value>
                <value>
                    <fullName>Military Income</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Part Time Income</fullName>
                </value>
                <value>
                    <fullName>Rental Income</fullName>
                </value>
                <value>
                    <fullName>Self Employment Income</fullName>
                </value>
                <value>
                    <fullName>Taxable Income</fullName>
                </value>
                <value>
                    <fullName>Total Before Tax Income</fullName>
                </value>
                <value>
                    <fullName>Unemployment Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and represents the loan this income is related to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Income__c</fullName>
        <description>This field is required and represents the amount of an applicant&apos;s monthly income.</description>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Months_On_Job__c</fullName>
        <description>This field populates the applicant&apos;s total number of months at their current place of employment. By default, this field is blank.</description>
        <inlineHelpText>This field contains the applicant&apos;s total number of months at their current place of employment.</inlineHelpText>
        <label>Months on Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Position__c</fullName>
        <description>The user populates this text field to capture the borrower’s job position. By default, this field is blank.</description>
        <inlineHelpText>Enter the borrower’s job position in this field.</inlineHelpText>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Income__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this lookup field with the Income record to which the income fields refer. By default, this field is blank.</description>
        <inlineHelpText>This field displays the Income record to which the Income record refers.</inlineHelpText>
        <label>Relationship Income</label>
        <referenceTo>LLC_BI__Income__c</referenceTo>
        <relationshipLabel>Income Values</relationshipLabel>
        <relationshipName>Income_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Yearly_Income__c</fullName>
        <description>This field is optional and represents the amount of an applicant&apos;s yearly income.</description>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Income</label>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Monthly_Yearly_Income</fullName>
        <active>true</active>
        <description>Monthly income must be 1/12 of yearly income.</description>
        <errorConditionFormula>LLC_BI__Monthly_Income__c != ROUND(LLC_BI__Yearly_Income__c/12,2)</errorConditionFormula>
        <errorMessage>Monthly income must be 1/12 of yearly income.</errorMessage>
    </validationRules>
</CustomObject>